<resources>
    <string name="app_name">iTunes Music Search</string>
    <string name="search_keyword">Search Keyword</string>
    <string name="Limit">Limit : 10</string>
    <string name="SortBy">Sort By :</string>
    <string name="Search">Search</string>
    <string name="Reset">Reset</string>
    <string name="Price">Price</string>
    <string name="Date">Date</string>
    <string name="Results">Results</string>
    <string name="Artist_name">Artist :</string>
    <string name="track_name">Track : </string>
    <string name="price_string">Price :</string>
    <string name="track_image">Track Image</string>
    <string name="Genre_name">Genre :</string>
    <string name="collection_price">Collection Price</string>
    <string name="Album_name">Album :</string>
    <string name="track_price">Track Price</string>
    <string name="finish">Finish</string>
</resources>
